# sass_mwe

./: manage.py  pyproject.toml
sass_mwe/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
sass_mwe/templates/: index.html
