[tool.poetry]
name = "sass-mwe"
version = "0.1.0"
description = ""
authors = ["Dominik George <nik@naturalnet.de>"]
packages = [{include = "sass_mwe"}]

[tool.poetry.dependencies]
python = "^3.11"
django-sass-processor = "^1.2.2"
django = "^4.1.5"
libsass = "^0.22.0"
django-compressor = "^4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
